Followings are updated; - changed evaluation method for formula from string to tree - evaluation of formula now supports variables - symbolic diff of simple formula is now possible; need to resolve infinite recursion - ch0 doumentation started; documentation about basic python and evironment settings
Todo for next commit;
- resolve recursion problem in symbolic diff
- start implement pyset and its heir; also, start implementing functions
somehow
- think about implementation of formula equivalence and simplification
- documentation on set and functions
- documentation revision on python recap
- LaTeX compile error; space not enough on device

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,16 @@
 *.aux 
 *.out
 *.log
+*.bbl
+*.blg
+*.toc
 
 # python related files
 __pycache__
 *.pyc
 
+# simple memos 
+memo.txt
+
+# batch file for windows
+*.bat
