--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@ memo.txt
 
 # batch file for windows
 *.bat
+
+# tmp files 
+tmp*.py
+
+# swap files 
+*.swp
+
+# too many images 
+**/lecture\ 2/**/*.png
+
